# three-body-simulator

./: LICENSE  README.md  pyproject.toml
src/three_body_simulator/: __init__.py
tests/: test_simulator.py
