[project]
name = "three-body-simulator"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "pyonkichi499", email = "hrs499944@gmail.com" }]
dependencies = [
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/three_body_simulator"]
